--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "cep-promise": "^4.1.0",
     "next": "^10.2.2",
     "parse": "^3.2.0",
+    "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "rebass": "^4.0.7",
     "recharts": "^2.0.9",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
